--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-7.4
+# resolver: lts-7.4
+resolver: lts-18.28
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
